Traspaso del proyecto del portfolio al repositorio exclusivo del depl…

--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/acerca-de/acerca-de.component.html
@@ -4,8 +4,7 @@
         <div class="d-flex p-2 bd-highlight">
            <div class="flex-shrink-0">
               <img class="img-responsive rounded-circle" id="imagenPerfil" alt="Imagen del perfil"
-                 src="{{persona.url_foto}}"
-                 alt="...">
+                 src="{{persona.url_foto}}">
            </div>
            <div class="flex-grow-1 ms-3">
               <h3 small class="text-muted bg-dark  p-2 bg-opacity-10">{{persona.nombre}} {{persona.apellido}}</h3>
