--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/footer/footer.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/footer/footer.component.html
@@ -3,6 +3,7 @@
       <div class="row mainrow d-lg-block d-flex overflow-auto">
         <div class="col">
           <p>Carolina E. M. Salanova | © Argentina Programa 2022</p>
+          <P>Avatar creado con: <a href="https://avatarmaker.com/">https://avatarmaker.com/</a></P>
           <p>Social media icons:<a href="https://www.iconshock.com/freeicons/collection/ant-design-icons">
               https://www.iconshock.com/freeicons/collection/ant-design-icons</a>
             (Licencia MIT): <a href="https://mit-license.org/">https://mit-license.org/</a>
