--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-skill/add-skill.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-skill/add-skill.component.html
@@ -31,14 +31,11 @@
                             </label>
                             <input type="number" class="form-control form-control-sm" autocomplete="off" type="text" id="idPorcentaje"
                             name="idPorcentaje" placeholder="Porcentaje del skill" aria-label=".form-control-sm example"
-                            [(ngModel)]="porcentaje" #idPorcetaje="ngModel" required min="1" max="100">
-                            <div *ngIf="idPorcetaje.invalid && (idPorcetaje.dirty || idPorcetaje.touched)" class="alert alert-danger">
-                                <div *ngIf="idPorcetaje.errors['required']">
+                            [(ngModel)]="porcentaje" #idPorcentaje="ngModel" required>
+                            <div *ngIf="idPorcentaje.invalid && (idPorcentaje.dirty || idPorcentaje.touched)" class="alert alert-danger">
+                                <div *ngIf="idPorcentaje.errors['required']">
                                    *El porcentaje es requerido!
                                 </div>
-                                 <div *ngIf="idPorcetaje.errors['Max']">
-                                    *Hasta 100
-                                 </div>
                              </div>
                         </div>
                     </div> 
