--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-proyecto/edit-proyecto.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-proyecto/edit-proyecto.component.html
@@ -1,22 +1,64 @@
-<div>
-    <div class="contenedor">
-        <div class="d-flex p-2 bd-highlight">
-            <div class="flex-shrink-0">
-                <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
-                    <div class="mb-3">
-                        <label class="form-label">
-                            <h1>Edite el proyecto</h1>
-                            <h1></h1>
-                        </label>
+<div class="contenedor">
+    <div class="row bg-dark p-2 bg-opacity-10">
+        <div class="flex-shrink-0">
+            <form (ngSubmit)="onUpdate()" novalidate #fproyec="ngForm">
+                <div class="mb-3">
+                    <label class="form-label">
+                        <h1>Edite el proyecto</h1>
+                        <h1></h1>
+                    </label>
+                </div>
+                <div class="row">
+                    <div class="col-10 order-first">
+                        <div class="mb-3">
+                            <label for="formFileSm" class="form-label">
+                                <h5>Nombre</h5>
+                            </label>
+                            <input class="form-control form-control-sm" type="text" id="idNombre_proy"
+                                name="idNombre_proy" autocomplete="off" placeholder="Nombre del proyecto"
+                                [(ngModel)]="proyecModelo.nombre_proy" #idNombre_proy="ngModel" required>
+                            <div *ngIf="idNombre_proy.invalid && (idNombre_proy.dirty || idNombre_proy.touched)"
+                                class="alert alert-danger">
+                                <div *ngIf="idNombre_proy.errors['required']">
+                                    *El nombre de la institución es requerido!
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 order-first">
+                        <div class="mb-3">
+                            <label for="formFileSm" class="form-label">
+                                <h5>Descripción</h5>
+                            </label>
+                            <textarea class="form-control form-control-sm" type="text" id="idDescripcion_proy"
+                                name="idDescripcion_proy" autocomplete="off" placeholder="Descripción del proyecto"
+                                [(ngModel)]="proyecModelo.descripcion_proy" #idDescripcion_proy="ngModel" required>
+                            </textarea>
+                            <div *ngIf="idDescripcion_proy.invalid && (idDescripcion_proy.dirty || idDescripcion_proy.touched)"
+                                class="alert alert-danger">
+                                <div *ngIf="idDescripcion_proy.errors['required']">
+                                    *La descripción del proyecto es requerido!
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-10 order-first">
                             <div class="mb-3">
                                 <label for="formFileSm" class="form-label">
-                                    <h5>Nombre</h5>
+                                    <h5>Imagen del proyecto</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="text" id="nombre_proy" name="nombre_proy"
-                                [(ngModel)]="proyecModelo.nombre_proy" required>
+                                <input class="form-control form-control-sm" type="text" id="idImagen_proy"
+                                    name="idImagen_proy" autocomplete="off" placeholder="Link a la foto del proyecto"
+                                    [(ngModel)]="proyecModelo.imagen_proy" #idImagen_proy="ngModel" required>
+                                <div *ngIf="idImagen_proy.invalid && (idImagen_proy.dirty || idImagen_proy.touched)"
+                                    class="alert alert-danger">
+                                    <div *ngIf="idImagen_proy.errors['required']">
+                                        *El link de la foto del proyecto es requerido!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -24,67 +66,66 @@
                         <div class="col-10 order-first">
                             <div class="mb-3">
                                 <label for="formFileSm" class="form-label">
-                                    <h5>Descripción</h5>
+                                    <h5>Link al proyecto</h5>
                                 </label>
-                                <textarea class="form-control form-control-sm" type="text" id="descripcion_proy" name="descripcion_proy"
-                                [(ngModel)]="proyecModelo.descripcion_proy" required></textarea>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-10 order-first">
-                                <div class="mb-3">
-                                    <label for="formFileSm" class="form-label">
-                                        <h5>Imagen del proyecto</h5>
-                                    </label>
-                                    <input class="form-control form-control-sm" type="text" id="imagen_proy" name="imagen_proy"
-                                    [(ngModel)]="proyecModelo.imagen_proy" required>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-10 order-first">
-                                <div class="mb-3">
-                                    <label for="formFileSm" class="form-label">
-                                        <h5>Link al proyecto</h5>
-                                    </label>
-                                    <input class="form-control form-control-sm" type="text" id="link_proy" name="link_proy"
-                                    [(ngModel)]="proyecModelo.link_proy" required>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-10 order-first">
-                                <div class="mb-3">
-                                    <label for="formFileSm" class="form-label">
-                                        <h5>Desde</h5>
-                                    </label>
-                                    <input class="form-control form-control-sm" type="text" id="inicio_proy" name="inicio_proy"
-                                    [(ngModel)]="proyecModelo.inicio_proy" required>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-10 order-first">
-                                <div class="mb-3">
-                                    <label for="formFileSm" class="form-label">
-                                        <h5>Hasta</h5>
-                                    </label>
-                                    <input class="form-control form-control-sm" type="text" id="fin_proy" name="fin_proy"
-                                     [(ngModel)]="proyecModelo.fin_proy" required>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                                <div class="mb-3">
-                                    <br>
-                                    <button type="submit" class="btn btn-dark btn-sm">Editar proyecto</button>
+                                <input class="form-control form-control-sm" type="text" id="idLink_proy"
+                                    name="idLink_proy" autocomplete="off" placeholder="Link al proyecto"
+                                    [(ngModel)]="proyecModelo.link_proy" #idLink_proy="ngModel" required>
+                                <div *ngIf="idLink_proy.invalid && (idLink_proy.dirty || idLink_proy.touched)"
+                                    class="alert alert-danger">
+                                    <div *ngIf="idLink_proy.errors['required']">
+                                        *El link al proyecto es requerido!
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </form>    
-            </div>
+                    <div class="row">
+                        <div class="col-10 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Desde</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" id="idInicio_proy"
+                                    name="idInicio_proy" autocomplete="off" placeholder="Inicio del proyecto"
+                                    [(ngModel)]="proyecModelo.inicio_proy" #idInicio_proy="ngModel" required>
+                                <div *ngIf="idInicio_proy.invalid && (idInicio_proy.dirty || idInicio_proy.touched)"
+                                    class="alert alert-danger">
+                                    <div *ngIf="idInicio_proy.errors['required']">
+                                        *La fecha/año del inicio del proyecto es requerido!
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-10 order-first">
+                            <div class="mb-3">
+                                <label for="formFileSm" class="form-label">
+                                    <h5>Hasta</h5>
+                                </label>
+                                <input class="form-control form-control-sm" type="text" id="idFin_proy"
+                                    name="idFin_proy" autocomplete="off" placeholder="Finalizacion"
+                                    [(ngModel)]="proyecModelo.fin_proy" #idFin_proy="ngModel" required>
+                                <div *ngIf="idFin_proy.invalid && (idFin_proy.dirty || idFin_proy.touched)"
+                                    class="alert alert-danger">
+                                    <div *ngIf="idFin_proy.errors['required']">
+                                        *La fecha/año de la teminación del proyecto es requerido!
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                            <div class="mb-3">
+                                <br>
+                                <button type="submit" class="btn btn-dark btn-sm" [disabled]="!fproyec.form.valid">Editar proyecto</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
